Fix: truncate (max-width: $mobile) to ($mobile)
`$mobile` variable includes max-width rule already. Was causing media query error preventing site build

--- a/quartz/components/styles/linksHeader.scss
+++ b/quartz/components/styles/linksHeader.scss
@@ -35,7 +35,7 @@ header {
   }
 }
 
-@media screen and (max-width: $mobile) {
+@media screen and ($mobile) {
   #links-header {
     display: block;
     overflow: scroll;
