--- a/quartz/styles/custom/infobox-callout.scss
+++ b/quartz/styles/custom/infobox-callout.scss
@@ -13,7 +13,7 @@
   }
 
 /* mobile breakpoint */
-@media screen and (max-width: $mobile) {
+@media screen and ($mobile) {
   .callout[data-callout="infobox"] {
     width: 100%;
     float: none;
